--- a/src/app/components/posts/posts.component.html
+++ b/src/app/components/posts/posts.component.html
@@ -1,10 +1,12 @@
+<app-post-form (newPost)="onNewPost($event)"></app-post-form>
+
 <div class="row">
   <div class="col s12 m6 offset-m3"><h2>Posts</h2></div>
 </div>
 
 <div class="row" *ngFor="let post of posts">
   <div class="col s12 m6 offset-m3">
-    <div class="card">
+    <div class="card" id="post_{{post.id}}">
       <div class="card-content">
         <span class="card-title">{{ post.title }}</span>
         <p>{{ post.body }}</p>
