--- a/src/app/components/posts/posts.component.html
+++ b/src/app/components/posts/posts.component.html
@@ -1,4 +1,9 @@
-<app-post-form (newPost)="onNewPost($event)"></app-post-form>
+<app-post-form
+  [currentPost]="currentPost"
+  [isEdit]="isEdit"
+  (newPost)="onNewPost($event)"
+  (updatedPost)="onUpdatedPost($event)"
+></app-post-form>
 
 <div class="row">
   <div class="col s12 m6 offset-m3"><h2>Posts</h2></div>
@@ -10,6 +15,12 @@
       <div class="card-content">
         <span class="card-title">{{ post.title }}</span>
         <p>{{ post.body }}</p>
+      </div>
+      <div class="card-action right-align">
+        <a class="light-blue-text text-lighten-2" href="#" (click)="editPost(post)"
+          ><i class="material-icons"> edit </i> Edit</a
+        >
+        <a class="red-text text-lighten-3" href="#"><i class="material-icons"> delete </i> Delete</a>
       </div>
     </div>
   </div>
