Added Routing - Working!

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,2 @@
 <app-navbar></app-navbar>
-<!-- <div class="container"><app-users></app-users></div> -->
-<div class="container"><app-posts></app-posts></div>
+<div class="container"><router-outlet></router-outlet></div>
