--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,19 +1,23 @@
 <nav class="blue darken-3">
   <div class="nav-wrapper">
-    <a href="#!" class="brand-logo">Logo</a>
+    <a routerLink="/" class="brand-logo">Logo</a>
     <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     <ul class="right hide-on-med-and-down">
-      <li><a href="sass.html">Sass</a></li>
-      <li><a href="badges.html">Components</a></li>
-      <li><a href="collapsible.html">Javascript</a></li>
-      <li><a href="mobile.html">Mobile</a></li>
+      <li [routerLinkActive]="['active']" [routerLinkActiveOptions]="{ exact: true }">
+        <a routerLink="/" routerLinkActive="router-link-active">Home</a>
+      </li>
+      <li [routerLinkActive]="['active']" [routerLinkActiveOptions]="{ exact: true }">
+        <a routerLink="/users">Users</a>
+      </li>
+      <li [routerLinkActive]="['active']" [routerLinkActiveOptions]="{ exact: true }">
+        <a routerLink="/posts">Posts</a>
+      </li>
     </ul>
   </div>
 </nav>
 
 <ul class="sidenav" id="mobile-demo">
-  <li><a href="sass.html">Sass</a></li>
-  <li><a href="badges.html">Components</a></li>
-  <li><a href="collapsible.html">Javascript</a></li>
-  <li><a href="mobile.html">Mobile</a></li>
+  <li><a routerLink="/">Home</a></li>
+  <li><a routerLink="/users">Users</a></li>
+  <li><a routerLink="/posts">Posts</a></li>
 </ul>
