--- a/src/app/components/posts/posts.component.html
+++ b/src/app/components/posts/posts.component.html
@@ -13,7 +13,9 @@
   <div class="col s12 m6 offset-m3">
     <div class="card" id="post_{{post.id}}">
       <div class="card-content">
-        <span class="card-title">{{ post.title }}</span>
+        <a routerLink="/post/{{post.id}}">
+          <span class="card-title">{{ post.title }}</span>
+        </a>
         <p>{{ post.body }}</p>
       </div>
       <div class="card-action right-align">
